crates/tests/tests/stage/fail/shader_missing.stderr
error: Missing required shader "test/does_not_exist", tried:
         $DIR/assets/shaders/test/does_not_exist.spv
 --> tests/stage/fail/shader_missing.rs:6:9
  |
6 | #[stage("test/does_not_exist", COMPUTE, c"main")]
  |         ^^^^^^^^^^^^^^^^^^^^^
